--- a/Languages/German/DefInjected/ThingDef/Items_Resource_Stuff.xml
+++ b/Languages/German/DefInjected/ThingDef/Items_Resource_Stuff.xml
@@ -2,13 +2,13 @@
 <LanguageData>
 
   <RawDiamond.label>Diamant</RawDiamond.label>
-  <RawDiamond.description>Ein simpler roher Diamant.</RawDiamond.description>
+  <RawDiamond.description>Ein einfacher roher Diamant.</RawDiamond.description>
   <RawDiamond.stuffProps.stuffAdjective>diamond</RawDiamond.stuffProps.stuffAdjective>
 
   <RawRuby.label>Rubin</RawRuby.label>
-  <RawRuby.description>Ein simpler roher Rubin.</RawRuby.description>
+  <RawRuby.description>Ein einfacher roher Rubin.</RawRuby.description>
 
   <RawSapphire.label>Saphir</RawSapphire.label>
-  <RawSapphire.description>Ein simpler roher Saphir.</RawSapphire.description>
+  <RawSapphire.description>Ein einfacher roher Saphir.</RawSapphire.description>
 
 </LanguageData>
